# RegexApp_wxWidgets

./: LICENSE  README.md
AppRegex_wxWidgets/: CMakeLists.txt  app.cpp
RegexApp_wxWidgets/: CMakeLists.txt  app.cpp  app.h  main.cpp
